5. Added ShutdownTime to config.
6. Bumped config to version 1.2.0.
7. Changed function Set-Reboot0100 to Set-Reboot. Also added ability to specify time down to the minute within a 24 hour window using the Time switch. If no time is specified the RebootTime config item is used.
8. Added function Set-Shutdown. If no time is specified the ShutdownTime config item is used.

######################
#                    #
#      v1.3.0.5      #
#      May 2021      #
######################
Known issues:
1. Get-NICInfo doesn't always run.
2. There is a Microsoft bug that prevents setting some SCHANNEL values to 0xFFFFFFFF (enabled). This causes some functions to throw errors and those values have to be manually set through the user interface. Bug has existed since at least 2006.

New features and other changes:
1. Added Update-VisioStencils function. Added Stencils config item.
2. Added Open-VisualStudioCodeSettings (aka Open-VSCodeSettings) function.
3. Added Windows 10 21H1 support to Get-HWInfo and Get-OperatingSystem.
4. Added Get-DayOfYear (aka Get-JulianDay) which works with either a day number (EX: 142) or date (EX: 20210522.)
5. Added Microsoft Edge install to InstallRemote.ps1.
6. Changed ActivClient install to use newer version checking code.
7. Added Edge config file item and bumped version. Then added Copy-Edge function.

######################
#                    #
#      v1.3.0.4      #
#      May 2021      #
######################
Known issues:
1. Get-NICInfo doesn't always run.
2. There is a Microsoft bug that prevents setting some SCHANNEL values to 0xFFFFFFFF (enabled). This causes some functions to throw errors and those values have to be manually set through the user interface. Bug has existed since at least 2006.

New features and other changes:
1. Added Disable-TLS1.0, Enable-TLS1.0, Disable-TLS1.1, Enable-TLS1.1, Disable-TLS1.2, and Enable-TLS1.2 functions. #DevSkim: ignore DS169125,DS440000
2. Corrected some issues in Set-RemediationValues.